# options-watcher

./: Dockerfile  README.md  docker-compose.yml  historical.ipynb  main.py  output.ipynb  pyproject.toml  train.ipynb
.github/workflows/: docker_build.yml
models/: NVDA_2026-04-13.joblib  NVDA_2026-04-13_anomalies.parquet  NVDA_2026-04-13_events.parquet  QQQ_2026-04-13.joblib  QQQ_2026-04-13_anomalies.parquet  QQQ_2026-04-13_events.parquet  SPY_2026-04-13.joblib  SPY_2026-04-13_anomalies.parquet  SPY_2026-04-13_events.parquet
src/: ws_client.py
src/db/: __init__.py  inmemory.py  pgdb.py  sql.py  tables.py
src/handlers/: __init__.py  quote_handler.py  timesale_handler.py
src/ml/: __init__.py  chain_snapshot.py  inference.py
src/tradier_stuff/: __init__.py  auth.py  helpers.py  mdata.py
