[project]
name = "options-watcher"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "connectorx>=0.4.5",
    "ipykernel>=7.2.0",
    "jolib>=0.0.1",
    "pandas-market-calendars>=5.1.0",
    "polars>=1.29.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "redis>=6.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.40",
    "websockets>=15.0.1",
]
